--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name        = Moonlight
+name        = MoonlightDB
 version     = 1.0
 description = Moonlight is a lightweight JSON-database for Python.
 url         = https://github.com/De4oult/Moonlight
