--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name        = MoonlightDB
-version     = 1.0
+version     = 1.2
 description = Moonlight is a lightweight JSON-database for Python.
 url         = https://github.com/De4oult/Moonlight
 license     = MIT License
@@ -17,6 +17,11 @@ python_requires  = >= 3.12
 install_requires = 
     colorama
     filelock
+    click
 
 packages = Moonlight
 zip_safe = False
+
+[options.entry_points]
+console_scripts =
+    moonlight = Moonlight.cli:cli
