--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,13 @@ long_description_content_type = text/markdown
 
 [options]
 python_requires  = >= 3.12
-install_requires = 
+install_requires =
     colorama
     filelock
+    sanic
+    sanic_cors
     click
+    pick
 
 packages = Moonlight
 zip_safe = False
