--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,9 @@ install_requires =
     sanic_cors
     click
     pick
+    InquirerPy
+    loguru
+    rich
 
 packages = Moonlight
 zip_safe = False
