Methods, path FIX, cli async FIX, log-file path FIX

--- a/app_data.json
+++ b/app_data.json
@@ -18,5 +18,6 @@
         "databases": [],
         "auto_schemas" : false
     },
+    "self_admin" : "[MOONLIGHT]",
     "current_locale": "en"
 }
