--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name        = MoonlightDB
-version     = 1.2
+version     = 2.0
 description = Moonlight is a lightweight JSON-database for Python.
 url         = https://github.com/De4oult/Moonlight
 license     = MIT License
-keywords    = python, cli, package, json, database, web, interface, async, python3, python3.12, database-management, webinterface, moonlight
+keywords    = python, cli, package, json, database, web, interface, async, python3, python3.12, database-management, moonlight
 
 author = de4oult
 author_email = kayra.dist@gmail.com
@@ -23,6 +23,9 @@ install_requires =
     InquirerPy
     rich
     loguru
+    markdown2
+    aiofiles
+    pyparsing
 
 packages = Moonlight
 zip_safe = False
